--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HTML Quizzer</title>
-  <style>
+  <style type="text/css">
     * {
       margin: 0;
       padding: 0;
@@ -16,7 +16,7 @@
       border: 1px solid #ccc;
       background: #f9f9f9;
     }
-    #header {
+    #container #header {
       height: 60px;
       background-color: pink;
       text-align: center;
@@ -26,7 +26,7 @@
       font-size: 24px;
       color: #333;
     }
-    #menu {
+    #container #menu {
       height: 40px;
       background-color: gainsboro;
       text-align: center;
@@ -41,7 +41,7 @@
     #menu a:hover {
       color: darkblue;
     }
-    #body-content {
+    #container #body-content {
       display: flex;
       min-height: 600px;
     }
